fix: 修复更多 Java 8 兼容性问题